fix(campaigns) Mobile spacing between campaigns

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -1003,6 +1003,11 @@ h2:after {
     height: 100%;
     width: 100%;
   }
+
+  #campaign-section .outline-button {
+    margin-bottom: 25px;
+  }
+  
   .ghid-btn{
     height: unset;
     width: unset;
